--- a/Documents/NetBeansProjects/DSA_WORKSHOP/nbproject/project.properties
+++ b/Documents/NetBeansProjects/DSA_WORKSHOP/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DSA_WORKSHOP
-main.class=dsa_workshop.DSA_WORKSHOP
+main.class=dsa_workshop.Array_Rotation
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
