--- a/Documents/NetBeansProjects/DSA_WORKSHOP/nbproject/project.properties
+++ b/Documents/NetBeansProjects/DSA_WORKSHOP/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=DSA_WORKSHOP
+application.vendor=ANSH SAXENA
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,6 +33,7 @@ dist.jar=${dist.dir}/DSA_WORKSHOP.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DSA_WORKSHOP
+endorsed.classpath=
 excludes=
 includes=**
 jar.compress=false
@@ -75,7 +77,7 @@ main.class=dsa_workshop.Array_Rotation
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_1.8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
